# xtclib

./: .gitignore  README.md  pyproject.toml  setup.py
example/: synuclein_STARLING.xtc
tests/: test_xtclib.py
xtclib/: __init__.py  _xtc_core.pyx  reader.py  writer.py  xdr_xtc.c  xdr_xtc.h
