[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "xtclib"
version = "0.1.0"
description = "Fast, standalone reader/writer for GROMACS XTC trajectory files"
readme = "README.md"
authors = [
    { name = "Alex S. Holehouse", email = "alex.holehouse@wustl.edu" },
]
license = { text = "LGPL-2.1-or-later" }

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

requires-python = ">=3.8"

dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
test = [
    "pytest>=6.1.2",
    "pytest-runner",
]

[project.urls]
# Update once hosting is set up
# "Documentation" = "https://xtclib.readthedocs.io/"
# "Source" = "https://github.com/<username>/xtclib/"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false
where = ["."]
include = ["xtclib", "xtclib.*"]

[tool.setuptools.package-data]
xtclib = [
    "*.pyx",
    "*.c",
    "*.h",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
